syntax = "proto3";

package kubernetes;

option go_package="protos/protos";

import "generalView.proto";


message NodeNamee {
  string name = 1;
}

service NodeChecker {
  rpc CheckNode(NodeNamee) returns (Empty) {}
}
